# playerone-sdk-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
playerone-sdk/: Cargo.toml  README.md
playerone-sdk-sys/: Cargo.toml  README.md  build.rs
playerone-sdk-sys/libs/: PlayerOneCamera.h
playerone-sdk-sys/src/: lib.rs
playerone-sdk/examples/: fps.rs  sensor_mode.rs  single_frame.rs  stream.rs
playerone-sdk/src/: camera.rs  lib.rs  types.rs
playerone-sdk/tests/: sensor_mode_integration.rs
