[package]
name = "playerone-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
playerone-sdk-sys = { path = "../playerone-sdk-sys" }

[dev-dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }
wgpu = "23.0.1"
winit = "0.30.5"
pollster = "0.4.0"

[[example]]
name = "single_frame"

[[example]]
name = "stream"

[[example]]
name = "fps"