[package]
name = "playerone-sdk"
version = "0.1.0"
edition = "2021"
description = "PlayerOne SDK bindings"
license = "MIT"
repository = "https://github.com/Uriopass/playerone-sdk-rs"

[dependencies]
playerone-sdk-sys = "0.1.0"

[dev-dependencies]
image = { version = "0.25.5", default-features = false, features = ["png"] }
wgpu = "23.0.1"
winit = "0.30.5"
pollster = "0.4.0"

[[example]]
name = "single_frame"

[[example]]
name = "stream"

[[example]]
name = "fps"